# weightlifting_app

./: setup-backend.sh  setup-backendV2.sh
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 5eced74875a5_initial_database_setup.py
backend/src/: main.py
backend/src/api/v1/: api.py
backend/src/api/v1/endpoints/: auth.py  exercises.py  sessions.py  stats.py  templates.py  users.py
backend/src/core/config/: settings.py
backend/src/core/database/: __init__.py  session.py
backend/src/models/: __init__.py  exercise.py  user.py  workout.py
backend/src/schemas/: exercise.py  session.py  stats.py  template.py  user.py
backend/src/services/: exercise_services.py  session_services.py  stats_services.py  template_services.py  user_services.py
backend/src/utils/: auth.py  dependencies.py
backend/tests/: conftest.py  test_auth.py  test_exercises.py  test_sessions.py  test_simple.py  test_stats.py  test_templates.py  test_users.py  test_workflows.py
frontend/: .gitignore  package-lock.json  package.json  repomix-output.txt
frontend/app/: +not-found.tsx  _layout.tsx  index.tsx
frontend/app/(auth)/: login.tsx  register.tsx
frontend/app/(drawer)/: _layout.tsx  index.tsx  profile.tsx  progress.tsx  settings.tsx  workout-history.tsx
frontend/components/: HeaderWithProfile.tsx  ProfileButton.tsx
frontend/context/: AuthContext.tsx  WorkoutContext.tsx
frontend/services/: api.ts  auth.service.ts  exercise.service.ts  progress.service.ts  template.service.ts  workout.service.ts
(+23 files in other folders)
